--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-mysql-session": "^3.0.2",
+    "express-session": "^1.18.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "express-session": "1.18.0",
+    "mysql": "^2.18.1",
     "passport": "0.7.0",
-    "passport-local": "1.0.0"
+    "passport-local": "^1.0.0",
+    "pm2": "^5.4.0",
+    "session-file-store": "^1.5.0"
   }
 }
