--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express-mysql-session": "^3.0.2",
     "express-session": "^1.18.0",
     "http-errors": "~1.6.3",
+    "jquery": "^3.7.1",
+    "jsdom": "^24.1.0",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "passport": "0.7.0",
