--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsdom": "^24.1.0",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.14",
     "passport": "0.7.0",
     "passport-local": "^1.0.0",
     "pm2": "^5.4.0",
